--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "expo": "~44.0.0",
     "expo-asset": "~8.4.6",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-calendars": "^1.1278.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
